--- a/csvts/src/main/resources/application.properties
+++ b/csvts/src/main/resources/application.properties
@@ -4,22 +4,15 @@ spring.datasource.username=postgres
 spring.datasource.password=bruce778
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+
+# Circular References (temporary fix)
+spring.main.allow-circular-references=true
 
 # Server Configuration
 server.port=8080
-
-# Thymeleaf Configuration
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
-
-# SQL initialization
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:sql/schema.sql
-spring.sql.init.data-locations=classpath:sql/data.sql
-
-# Logging
-logging.level.com.nwu.csvts=DEBUG
