--- a/csvts/pom.xml
+++ b/csvts/pom.xml
@@ -72,6 +72,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>com.nwu.csvts.CsvtsApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.springframework.boot</groupId>
