--- a/csvts/src/main/resources/application.properties
+++ b/csvts/src/main/resources/application.properties
@@ -2,17 +2,33 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/csvts_db
 spring.datasource.username=postgres
 spring.datasource.password=bruce778
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# SQL Initialization
+spring.sql.init.mode=always
 
 # Thymeleaf Configuration
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
 
-# Circular References (temporary fix)
+# Circular References
 spring.main.allow-circular-references=true
+spring.main.lazy-initialization=false
 
 # Server Configuration
 server.port=8080
+
+# Logging (for debugging)
+logging.level.com.nwu.csvts=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
